# esp32-rtl-sdr

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  class_driver  class_driver.c  esp_libusb.c  esp_libusb.h  librtlsdr.c  reg_field.h  rtl-sdr.h  rtl-sdr_export.h  rtlsdr_i2c.h  tuner_e4k.c  tuner_e4k.h  tuner_fc0012.c  tuner_fc0012.h  tuner_fc0013.c  tuner_fc0013.h  tuner_fc2580.c  tuner_fc2580.h  tuner_r82xx.c  tuner_r82xx.h  usb_host_lib_main.c
